--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </figure>
         </header>
         <section class="app__section-banner-container">
-            <h1 class="app__title">
+            <h1 class="app__title active">
                 Otimize sua produtividade,<br>
                 <strong class="app__title-strong">mergulhe no que importa.</strong>
             </h1>
@@ -36,10 +36,10 @@
                         <button data-contexto="foco" class="app__card-button app__card-button--foco active">Foco</button>
                     </li>
                     <li class="app__card-list-item">
-                        <button data-contexto="short" class="app__card-button app__card-button--curto">Descanso curto</button>
+                        <button data-contexto="curto" class="app__card-button app__card-button--curto">Descanso curto</button>
                     </li>
                     <li class="app__card-list-item">
-                        <button data-contexto="long" class="app__card-button app__card-button--longo">Descanso longo</button>
+                        <button data-contexto="longo" class="app__card-button app__card-button--longo">Descanso longo</button>
                     </li>
                 </ul>
                 <div id="timer" class="app__card-timer"></div>
