--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <div class="app__card-primary-button-wrapper">
                     <button id="start-pause" class="app__card-primary-button">
                         <img class="app__card-primary-butto-icon" src="./imagens/play_arrow.png" alt="">
-                        <span>Começar</span>
+                        <span class="">Começar</span>
                     </button>
                 </div>
             </div>
